--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/ioredis": "^3.2.8",
     "@types/mongodb": "^3.1.17",
     "@types/node": "^10.12.18",
+    "@types/node-sass": "^3.10.32",
     "@types/pug": "^2.0.4",
     "@types/puppeteer": "^1.11.1",
     "@types/redlock": "^3.0.2",
