--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "concurrently \"gulp\" \"tsc -w\" \"cd dist && nodemon main.js --dev -w ../dist\"",
     "patch": "git add --all && git commit --allow-empty -m Changes && npm version patch && git push",
     "minor": "git add --all && git commit --allow-empty -m Changes && npm version minor && git push",
-    "major": "git add --all && git commit --allow-empty -m Changes && npm version major && git push"
+    "major": "git add --all && git commit --allow-empty -m Changes && npm version major && git push",
+    "publish-patch": "git add --all && git commit --allow-empty -m Changes && npm version patch && npm publish . && git push",
+    "publish-minor": "git add --all && git commit --allow-empty -m Changes && npm version minor && npm publish . && git push",
+    "publish-major": "git add --all && git commit --allow-empty -m Changes && npm version major && npm publish . && git push"
   },
   "engines": {
     "node": "7.10.0"
